// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link 正确的快照 1`] = `
<a
  className="normal"
  href="http://www.facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  facebook
</a>
`;

exports[`Link 这个是正确的快照更改 1`] = `
<a
  className="normal"
  href="http://www.yanleweb.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  yanlelele
</a>
`;

exports[`Link 这种时候，快照就要报错了 1`] = `
Object {
  "createAt": Any<Date>,
  "id": Any<Number>,
  "name": "yanle",
}
`;
